--- a/projectworkspace/prime_fit_gym_app/src/main/resources/application.properties
+++ b/projectworkspace/prime_fit_gym_app/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #Tomcat server port number 8080
 server.port=8080
 #context path default value : empty
-server.servlet.context-path=/spring-mvc-boot
+server.servlet.context-path=/primefit
 #DB properties
 spring.datasource.url=jdbc:mysql://localhost:3306/primefit?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
