--- a/projectworkspace/prime_fit_gym_app/src/main/resources/application.properties
+++ b/projectworkspace/prime_fit_gym_app/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.servlet.context-path=/spring-mvc-boot
 #DB properties
 spring.datasource.url=jdbc:mysql://localhost:3306/primefit?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=girish
+spring.datasource.password=root123
 # JPA properties
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
