--- a/fitart-master0902/package.json
+++ b/fitart-master0902/package.json
@@ -6,6 +6,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
     "@fortawesome/free-brands-svg-icons": "^6.0.0",
     "@fortawesome/react-fontawesome": "^0.1.17",
+    "axios": "^0.26.1",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
     "react-icons": "^3.7.0",
