--- a/fitart-master0902/package.json
+++ b/fitart-master0902/package.json
@@ -6,13 +6,23 @@
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
     "@fortawesome/free-brands-svg-icons": "^6.0.0",
     "@fortawesome/react-fontawesome": "^0.1.17",
-    "axios": "^0.26.1",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "axios": "^0.24.0",
+    "bootstrap": "^4.6.1",
     "react": "^16.10.1",
+    "react-bootstrap": "^2.0.4",
+    "react-bootstrap-icons": "^1.7.2",
     "react-dom": "^16.10.1",
     "react-icons": "^3.7.0",
+    "react-redux": "^7.2.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.2",
-    "react-star-rating-component": "^1.4.1"
+    "react-star-rating-component": "^1.4.1",
+    "redux": "^4.1.1",
+    "redux-devtools-extension": "^2.13.9",
+    "sweetalert2": "^11.4.8",
+    "web-vitals": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
