--- a/fitart-master0902/package.json
+++ b/fitart-master0902/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^12.1.2",
     "axios": "^0.24.0",
     "bootstrap": "^4.6.1",
+    "emailjs-com": "^3.2.0",
     "react": "^16.10.1",
     "react-bootstrap": "^2.0.4",
     "react-bootstrap-icons": "^1.7.2",
